1-eks-jobs-adrianse.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: jobs-adrianse-dev
  labels:
    app: jobs-adrianse-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-adrianse-dev
  template:
    metadata:
      labels:
        app: jobs-adrianse-dev
    spec:
      containers:
        - name: jobs-adrianse-dev
          image: 046874047165.dkr.ecr.ap-south-1.amazonaws.com/jobs_adrianse:development
          imagePullPolicy: Always
          ports:
          - containerPort: 8001

---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: jobs-adrianse-dev
  annotations:
    # service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    # service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    # service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    # service.beta.kubernetes.io/aws-load-balancer-type: nlb
    alb.ingress.kubernetes.io/healthcheck-path: /sensordevices

spec:
  selector:
    app: jobs-adrianse-dev
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
      # nodePort: 30001
  # type: NodePort
