11-eks-jobs-opentext.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: jobs-opentext-dev
  labels:
    app: jobs-opentext-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-opentext-dev
  template:
    metadata:
      labels:
        app: jobs-opentext-dev
    spec:
      containers:
        - name: jobs-opentext-dev
          image: 046874047165.dkr.ecr.ap-south-1.amazonaws.com/jobs_opentext:development
          imagePullPolicy: Always
          ports:
            - containerPort: 8013
          
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: jobs-opentext-dev
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /opentext/sensordevices
spec:
  selector:
    app: jobs-opentext-dev
  ports:
    - protocol: TCP
      port: 8013
      targetPort: 8013
      # nodePort: 30013
  # type: NodePort
