2-eks-jobs-nhance.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: jobs-nhance-dev
  labels:
    app: jobs-nhance-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-nhance-dev
  template:
    metadata:
      labels:
        app: jobs-nhance-dev
    spec:
      containers:
        - name: jobs-nhance-dev
          image: 046874047165.dkr.ecr.ap-south-1.amazonaws.com/jobs_nhance:development
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
          
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: jobs-nhance-dev
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /nhance/sensordevices
spec:
  selector:
    app: jobs-nhance-dev
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
      # nodePort: 30002
  # type: NodePort
