3-eks-jobs-fidelity.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: jobs-fidelity-dev
  labels:
    app: jobs-fidelity-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-fidelity-dev
  template:
    metadata:
      labels:
        app: jobs-fidelity-dev
    spec:
      containers:
        - name: jobs-fidelity-dev
          image: 046874047165.dkr.ecr.ap-south-1.amazonaws.com/jobs_fidelity:development
          imagePullPolicy: Always
          ports:
            - containerPort: 8003
          
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: jobs-fidelity-dev
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /fidelity/sensordevices
spec:
  selector:
    app: jobs-fidelity-dev
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
      # nodePort: 30003
  # type: NodePort
