4-eks-jobs-bosch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: jobs-bosch-dev
  labels:
    app: jobs-bosch-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-bosch-dev
  template:
    metadata:
      labels:
        app: jobs-bosch-dev
    spec:
      containers:
        - name: jobs-bosch-dev
          image: 046874047165.dkr.ecr.ap-south-1.amazonaws.com/jobs_bosch:development
          imagePullPolicy: Always
          ports:
            - containerPort: 8006
          
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: jobs-bosch-dev
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /bosch/sensordevices
spec:
  selector:
    app: jobs-bosch-dev
  ports:
    - protocol: TCP
      port: 8006
      targetPort: 8006
      # nodePort: 30006
  # type: NodePort
