5-eks-jobs-ubl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: jobs-ubl-dev
  labels:
    app: jobs-ubl-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-ubl-dev
  template:
    metadata:
      labels:
        app: jobs-ubl-dev
    spec:
      containers:
        - name: jobs-ubl-dev
          image: 046874047165.dkr.ecr.ap-south-1.amazonaws.com/jobs_ubl:development
          imagePullPolicy: Always
          ports:
            - containerPort: 8007
          
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: jobs-ubl-dev
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /ubl/sensordevices
spec:
  selector:
    app: jobs-ubl-dev
  ports:
    - protocol: TCP
      port: 8007
      targetPort: 8007
      # nodePort: 30007
  # type: NodePort
