6-eks-jobs-buerofreunde.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: jobs-buerofreunde-dev
  labels:
    app: jobs-buerofreunde-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-buerofreunde-dev
  template:
    metadata:
      labels:
        app: jobs-buerofreunde-dev
    spec:
      containers:
        - name: jobs-buerofreunde-dev
          image: 046874047165.dkr.ecr.ap-south-1.amazonaws.com/jobs_brfr:development
          imagePullPolicy: Always
          ports:
            - containerPort: 8008
          
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: jobs-buerofreunde-dev
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /buerofreunde/sensordevices
spec:
  selector:
    app: jobs-buerofreunde-dev
  ports:
    - protocol: TCP
      port: 8008
      targetPort: 8008
      # nodePort: 30008
  # type: NodePort
