8-eks-jobs-rmz.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: jobs-rmz-dev
  labels:
    app: jobs-rmz-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-rmz-dev
  template:
    metadata:
      labels:
        app: jobs-rmz-dev
    spec:
      containers:
        - name: jobs-rmz-dev
          image: 046874047165.dkr.ecr.ap-south-1.amazonaws.com/jobs_rmz:development
          imagePullPolicy: Always
          ports:
            - containerPort: 8010
          
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: jobs-rmz-dev
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /rmz/sensordevices
spec:
  selector:
    app: jobs-rmz-dev
  ports:
    - protocol: TCP
      port: 8010
      targetPort: 8010
      # nodePort: 30010
  # type: NodePort
