9-eks-jobs-ccl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: jobs-ccl-dev
  labels:
    app: jobs-ccl-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-ccl-dev
  template:
    metadata:
      labels:
        app: jobs-ccl-dev
    spec:
      containers:
        - name: jobs-ccl-dev
          image: 046874047165.dkr.ecr.ap-south-1.amazonaws.com/jobs_ccl:development
          imagePullPolicy: Always
          ports:
            - containerPort: 8011
          
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: jobs-ccl-dev
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /ccl/sensordevices
spec:
  selector:
    app: jobs-ccl-dev
  ports:
    - protocol: TCP
      port: 8011
      targetPort: 8011
      # nodePort: 30011
  # type: NodePort
